enviando arquivos para o repositorio remoto

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,93 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/SaídadeDados_01/nbproject/project.xml
+/SaídadeDados_01/nbproject/build-impl.xml
+/SaídadeDados_01/nbproject/project.properties
+/SaídadeDados_01/build.xml
+/SaídadeDados_01/nbproject/genfiles.properties
+
+/Funções_02/nbproject/build-impl.xml
+/Funções_02/build.xml
+/Funções_02/nbproject/project.properties
+/Funções_02/nbproject/project.xml
+/Funções_02/nbproject/genfiles.properties
+
+/Classe_Random_03/nbproject/genfiles.properties
+/Classe_Random_03/build.xml
+/Classe_Random_03/nbproject/build-impl.xml
+/Classe_Random_03/nbproject/project.xml
+/Classe_Random_03/nbproject/project.properties
+
+/Classe_e_objetos_04/nbproject/project.xml
+/Classe_e_objetos_04/build.xml
+/Classe_e_objetos_04/nbproject/genfiles.properties
+/Classe_e_objetos_04/nbproject/project.properties
+/Classe_e_objetos_04/nbproject/build-impl.xml
+
+/Definindo_visibilidade_05/nbproject/project.xml
+/Definindo_visibilidade_05/nbproject/build-impl.xml
+/Definindo_visibilidade_05/nbproject/project.properties
+/Definindo_visibilidade_05/nbproject/genfiles.properties
+/Definindo_visibilidade_05/build.xml
+
+/Métodos_construtor_get_set_06/nbproject/project.properties
+/Métodos_construtor_get_set_06/build.xml
+/Métodos_construtor_get_set_06/nbproject/build-impl.xml
+/Métodos_construtor_get_set_06/nbproject/genfiles.properties
+/Métodos_construtor_get_set_06/nbproject/project.xml
+
+/ P_Conta_banco _07/build.xml
+/ P_Conta_banco _07/nbproject/project.xml
+/ P_Conta_banco _07/nbproject/build-impl.xml
+/ P_Conta_banco _07/nbproject/genfiles.properties
+/ P_Conta_banco _07/nbproject/project.properties
+
+/Interface_08/nbproject/genfiles.properties
+/Interface_08/nbproject/project.properties
+/Interface_08/build.xml
+/Interface_08/nbproject/project.xml
+/Interface_08/nbproject/build-impl.xml
+
+/Relacionamento_entre_classes_09/build.xml
+/Relacionamento_entre_classes_09/nbproject/project.properties
+/Relacionamento_entre_classes_09/nbproject/project.xml
+/Relacionamento_entre_classes_09/nbproject/genfiles.properties
+/Relacionamento_entre_classes_09/nbproject/build-impl.xml
+
+/Exercício_10/nbproject/project.properties
+/Exercício_10/nbproject/project.xml
+/Exercício_10/nbproject/genfiles.properties
+/Exercício_10/nbproject/build-impl.xml
+/Exercício_10/build.xml
+
+/Herança_11/nbproject/project.properties
+/Herança_11/nbproject/genfiles.properties
+/Herança_11/nbproject/build-impl.xml
+/Herança_11/nbproject/project.xml
+/Herança_11/build.xml
+
+/Herança02_12/build.xml
+/Herança02_12/nbproject/project.xml
+/Herança02_12/nbproject/build-impl.xml
+/Herança02_12/nbproject/genfiles.properties
+/Herança02_12/nbproject/project.properties
+
+/Polimorfismo_13/build.xml
+/Polimorfismo_13/nbproject/build-impl.xml
+/Polimorfismo_13/nbproject/project.xml
+/Polimorfismo_13/nbproject/genfiles.properties
+/Polimorfismo_13/nbproject/project.properties
+
+/Polimorfismo02_14/nbproject/genfiles.properties
+/Polimorfismo02_14/nbproject/build-impl.xml
+/Polimorfismo02_14/nbproject/project.properties
+/Polimorfismo02_14/build.xml
+/Polimorfismo02_14/nbproject/project.xml
+
+/Exercício_15/nbproject/project.xml
+/Exercício_15/nbproject/project.properties
+/Exercício_15/nbproject/genfiles.properties
+/Exercício_15/build.xml
+/Exercício_15/nbproject/build-impl.xml
